# DirectAI

./: .env.example  .gitignore  DirectML.AI.Platform.sln  Directory.Build.props  LICENSE  LOCAL_DEVELOPMENT.md  MVP_BUILD_SESSION_SUMMARY.md  MVP_PERFORMANCE_OPTIMIZATIONS.md  MVP_STATUS.md  MVP_TESTING_STATUS.md  PACKAGE_SUMMARY.md  QUICK_REFERENCE.md  README.md  TESTING_QUICK_START.md  azure.yaml  copilot-instructions.md  docker-compose.yml  start-mvp.ps1  upload.html
.azure/: plan.copilotmd
.github/: copilot-instructions.md
.github/workflows/: build-api-server.yml  build-engines.yml  build-web.yml  compile-engine.yml  deploy-model.yml  deploy-platform.yml  deploy-stamp.yml  functional-tests.yml  onboard-customer.yml  populate-cache.yml
database/: schema.sql
deploy/: cluster-issuers.yaml
deploy/models/: README.md  bge-large-en-v1.5.yaml  (+3 more)
docs/: AI_TRAINING_ARCHITECTURE.md  AKS_DEPLOYMENT_SUMMARY.md  AKS_GPU_DEPLOYMENT.md  AKS_QUICK_REFERENCE.md  ANALYSIS_WORKER_SUMMARY.md  API_CONTROLLERS_SUMMARY.md  ARCHITECTURE_VISUAL.md  AUDIO_FLAMINGO_BARK_INTEGRATION_COMPLETE.md  AUDIO_PLAYBACK_IMPLEMENTATION.md  AUTOMATIC_PROCESSING.md  CONFIGURATION_DRIVEN_ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  DRAG_AND_DROP.md  DRAG_DROP_CRASH_FIX.md  GENERATION_WORKER_SUMMARY.md  HIRING_EXPERTS.md  HIRING_GITHUB_COPILOT_TEAM.md  HIRING_UI_UX_WINUI3.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  JOB_CLEANUP_AND_STEM_LIBRARY.md  LIBRARY_UI_COMPLETE.md  MULTI_SELECT_FEATURE.md  MUSICGEN_TRAINING_GUIDE.md  MUSIC_PLATFORM_ARCHITECTURE.md  MUSIC_THEORY_AI_IMPLEMENTATION.md  MVP_COMPLETION_GUIDE.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  REAL_TIME_JOB_TRACKING.md  TRAINING_WITH_YOUR_MP3_DATASET.md  WORKERS_COMPLETE_SUMMARY.md  WORKER_AUTOSCALING.md  openapi.json  openapi.yaml
infra/: main.bicep  main.parameters.json  resources.bicep
infrastructure/: README.md  main.bicep
scripts/: build-workers.ps1  create-test-apikey.py  deploy-aks.ps1  export-openapi.py  export_training_dataset.py  load-test-chat.py  load-test-embeddings.py  update-workers.ps1
src/api-server/: Dockerfile  pyproject.toml
src/api-server/app/: config.py  main.py  metrics.py  telemetry.py
src/api-server/app/audit/: __init__.py  config.py  middleware.py  redaction.py  schemas.py  writer.py
src/api-server/app/auth/: __init__.py  api_key.py  key_store.py
src/api-server/app/billing/: __init__.py
src/api-server/app/guardrails/: __init__.py  config.py  content_safety.py  middleware.py  schemas.py
src/api-server/app/middleware/: __init__.py  correlation_id.py  rate_limit.py  request_logging.py
src/api-server/app/models/: __init__.py  domain.py  repository.py
src/api-server/app/router/: __init__.py  engine.py  fallback.py  repository.py  routes.py  schemas.py
src/api-server/app/routes/: __init__.py  audio_transcriptions.py  chat_completions.py  embeddings.py  models.py  native_deployments.py  native_engine_cache.py  native_models.py  native_system.py
src/api-server/app/routing/: __init__.py  backend_client.py  health_monitor.py  model_registry.py
src/api-server/app/schemas/: __init__.py  audio.py  chat.py  embeddings.py  models.py  native.py
src/api-server/tests/: conftest.py  test_audio.py  test_audit.py  test_auth.py  test_billing.py  test_blob_audit.py  test_chat.py  test_correlation_id.py  test_embeddings.py  test_engine_cache.py  test_guardrails.py  test_health.py  test_integration_proxy.py  test_metrics.py  test_models.py  test_native_deployments.py  test_native_models.py  test_native_system.py  test_rate_limit.py  test_router.py  test_sensitive_data.py  test_tracing.py
src/embeddings-engine/: Dockerfile  README.md  pyproject.toml
src/embeddings-engine/engine/: __init__.py  batcher.py  config.py  export.py  main.py  metrics.py  model.py
src/embeddings-engine/tests/: conftest.py  test_batcher.py  test_embeddings.py  test_health.py
src/trtllm-engine/: .dockerignore  Dockerfile  README.md  pyproject.toml
src/trtllm-engine/engine/: __init__.py  chat_format.py  compat.py  config.py  main.py  metrics.py  runner.py  whisper.py  whisper_preprocessing.py
src/trtllm-engine/tests/: conftest.py  test_backpressure.py  test_chat.py  test_compat.py  test_health.py  test_whisper.py
(+306 files in other folders)
