[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# LOCKFILES: Generate with `pip-compile pyproject.toml -o requirements.lock`
#   For dev: `pip-compile pyproject.toml --extra dev --extra cpu -o requirements-dev.lock`

[project]
name = "directai-embeddings-engine"
version = "0.1.0"
description = "High-throughput ONNX Runtime embedding inference server with dynamic batching."
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "onnxruntime-gpu>=1.18,<2",
    "numpy>=1.26,<3",
    "tokenizers>=0.20,<1",
    "pydantic>=2,<3",
    "pydantic-settings>=2.5,<3",
    "prometheus-client>=0.21,<1",
]

[project.optional-dependencies]
cpu = [
    "onnxruntime>=1.18,<2",
]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "httpx>=0.27,<1",
    "ruff>=0.5,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["engine"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
